fixed grid/flexbox issue

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <label for="player2">Player 2: </label>
         <input type="text" id="player2" name="player2" required>
         <br>
-        <button id="enter" type="submit" style="display: none;"></button>
+        <button id="enter" type="submit">Start Game</button>
     </form>
    <div id="gameboard" style="display: none;"></div>
    <div id="playInfo" style="display: none;">
@@ -28,7 +28,7 @@
             <div id="p2"></div>
         </div>
         <div id="switch">
-            <button id="p1button" value=X"></button>
+            <button id="p1button" value="X"></button>
             <button id="p2button" value="O"></button>
         </div>
 
