--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <label for="player2">Player 2: </label>
         <input type="text" id="player2" name="player2" required>
         <br>
-        <button id="enter" type="submit">Start Game</button>
+        <button id="enter" type="submit" style="display: none;"></button>
     </form>
-   <div id="gameboard" style="display: none;"></div>
-   <div id="playInfo" style="display: none;">
+    <div id="gameboard" style="display: none;"></div>
+    <div id="playInfo" style="display: none;">
         <div id="players">
             <div id="p1"></div>
             <div id="p2"></div>
@@ -31,8 +31,7 @@
             <button id="p1button" value="X"></button>
             <button id="p2button" value="O"></button>
         </div>
-
-   </div>
-
+    </div>
+    <div id="startGame">START GAME</div>
 </body>
 </html>
